@@ -1,5 +1,6 @@
 #!/bin/bash
 
-clojure -J-XX:-OmitStackTraceInFastThrow -J--illegal-access=deny -A:base:uberjar startrek.jar
+clojure -Spom
+clojure -A:uberjar
 chmod +r startrek.jar
 docker build -f scripts/docker/Dockerfile -t startrek .
